--- a/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_fetch.adoc
@@ -12,7 +12,9 @@ The {pluginname} plugin does not sort the result before displaying. This allows 
 
 *Input parameters:* None
 
-*Return data:* `+Array+` of revision `+Objects+` where each object has the following fields:
+*Return data:* `+Array+` of revision `+Objects+`
+
+Each revision `+Object+` must have the following fields:
 [cols="1,1,1,3",options="header"]
 |===
 |Field |Type |Required? |Description
