--- a/modules/ROOT/partials/configuration/revisionhistory_fetch_revision.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_fetch_revision.adoc
@@ -13,14 +13,7 @@ The plugin uses this option to update for when either the selected and the close
 |`+revision+` | `+Object+` | required | The revision object to load (must include `revisionId` field).
 |===
 
-*Return data:* revision `+Object+` with the following fields:
-[cols="1,1,3",options="header"]
-|===
-|Field |Type |Required? |Description
-|`+revisionId+` | `+string+` | required | The unique string Id of the revision.
-|`+createdAt+` | `+string+` | required | A UTC datetime string in ISO-8061 format.
-|`+content+` | `+string+` | required | HTML string of the revision content.
-|===
+*Return data:* revision `+Object+` as described in the return data of the xref:revisionhistory.adoc#revisionhistory_fetch[revisionhistory_fetch] option.
 
 === Example: using `revisionhistory_fetch_revision`
 
