--- a/modules/ROOT/partials/configuration/revisionhistory_fetch_revision.adoc
+++ b/modules/ROOT/partials/configuration/revisionhistory_fetch_revision.adoc
@@ -1,7 +1,6 @@
 [[revisionhistory_fetch_revision]]
 == `revisionhistory_fetch_revision`
-
-The plugin uses this option to update for when either the selected and the closest revisions have no content. The function returns a Promise that resolves with an updated revision.
+When a revision is selected, the plugin uses this option to update the selected or closest revision that has no content. The function is expected to return a Promise that resolves with an updated revision.
 
 *Type:* `+Function+` (Returns a https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Promise[Promise])
 
