DOC-2439: add demo, restructure nav.adoc, update content.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -310,9 +310,9 @@
 **** xref:mediaembed-server-config.adoc[Configure Enhanced Media Embed Server]
 **** xref:mediaembed-server-integration.adoc[Integrate Enhanced Media Embed Server]
 *** xref:advtable.adoc[Enhanced Tables]
-*** Export to PDF
-**** xref:exportpdf.adoc[Export to PDF]
-**** xref:html-to-pdf-converter-api.adoc[HTML to PDF Converter API]
+*** xref:exportpdf.adoc[Export to PDF]
+**** xref:html-to-pdf-converter-api.adoc[Introduction]
+**** link:https://exportpdf.converter.tiny.cloud/docs[HTML to PDF Converter API^]
 *** Export to Word
 **** xref:exportword.adoc[Export to Word]
 **** xref:export-to-word-standalone-service.adoc[Export to Word standalone service]
