--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -83,11 +83,11 @@ In {productname} {release-version}, a new `revisionhistory_fetch_revision` optio
 
 NOTE: As part of this addition, the `content` property is now optional. For the fetched revisions, an empty string is considered as valid content.
 
-NOTE: The integrators still need to configure the `revisionhistory_fetch` option to provide the initial revisions.
+IMPORTANT: The `revisionhistory_fetch` option must be configured when using the new `revisionhistory_fetch_revision` option, as it is required to provide the initial revisions.
 
 For more information on the `revisionhistory_fetch_revision` option, see: xref:revisionhistory.adoc#revisionhistory_fetch_revision[Revision History - revisionhistory_fetch_revision].
 
-This option would be helpful when dealing with revisions that have large content or preferring to only load the content when required.
+This option is useful for handling revisions with large content or for loading content only when needed.
 
 For information on the **Revision History** premium plugin, see: xref:revisionhistory.adoc[Revision History].
 
