--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -134,7 +134,7 @@ In previous versions of {productname}, the Search & Replace dialog inputs were i
 
 As a consequence, the dialog was less accessible because the input placeholders were hidden once the user started typing. This posed difficulties for users who rely on consistent visual cues for context.
 
-{productname} {release-version} addresses this issue. Now, placeholders have been replaced by input labels.
+{productname} {release-version} addresses this issue. Now, placeholders have been replaced by input labels located above the input fields.
 
 As a result, dialog is now more accessible and the labels remain visible at all times.
 
