--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -136,7 +136,7 @@ As a consequence, the dialog was less accessible because the input placeholders 
 
 {productname} {release-version} addresses this issue. Now, placeholders have been replaced by input labels located above the input fields.
 
-As a result, dialog is now more accessible and the labels remain visible at all times.
+As a result, the Search & Replace dialog is now more accessible and there are input labels that remain visible at all times.
 
 
 [[additions]]
