--- a/modules/ROOT/pages/html-to-pdf-converter-api.adoc
+++ b/modules/ROOT/pages/html-to-pdf-converter-api.adoc
@@ -155,6 +155,6 @@ When using the converter service, the following options are available:
 
 > Explore the comprehensive API documentation for the {pluginname} Premium plugin at https://exportpdf.converter.tiny.cloud/docs[API Reference documentation (Export to PDF).^]
 
-== Export to PDF with {productname}
+== Export to PDF Plugin reference
 
 > Explore {productname}'s official Export to PDF Premium plugin documentation at https://exportpdf.converter.tiny.cloud/docs[Export to PDF.^]
