--- a/modules/ROOT/pages/html-to-pdf-converter-api.adoc
+++ b/modules/ROOT/pages/html-to-pdf-converter-api.adoc
@@ -157,4 +157,4 @@ When using the converter service, the following options are available:
 
 == Export to PDF Plugin reference
 
-> Explore {productname}'s official Export to PDF Premium plugin documentation at https://exportpdf.converter.tiny.cloud/docs[Export to PDF.^]
+> Explore {productname}'s official Export to PDF Premium plugin documentation at https://www.tiny.cloud/docs/tinymce/latest/exportpdf/[Export to PDF.^]
