--- a/modules/ROOT/pages/html-to-pdf-converter-api.adoc
+++ b/modules/ROOT/pages/html-to-pdf-converter-api.adoc
@@ -153,7 +153,7 @@ When using the converter service, the following options are available:
 
 == API Reference
 
-> Explore the comprehensive API documentation for the {pluginname} Premium plugin at https://exportpdf.converter.tiny.cloud/docs[API Reference documentation (Export to PDF).^]
+> Explore the comprehensive API documentation at https://exportpdf.converter.tiny.cloud/docs[API Reference documentation.^]
 
 == Export to PDF Plugin reference
 
