--- a/modules/ROOT/pages/html-to-pdf-converter-api.adoc
+++ b/modules/ROOT/pages/html-to-pdf-converter-api.adoc
@@ -42,9 +42,9 @@ Tailor your PDF documents to suit your needs:
 
 When using the converter service, the following options are available:
 
-* link:https://exportpdf.converter.tiny.cloud/docs#section/General/HTML[HTML]
-* link:https://exportpdf.converter.tiny.cloud/docs#section/General/CSS[CSS]
-* link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options[Options]
+* link:https://exportpdf.converter.tiny.cloud/docs#section/General/HTML[HTML^]
+* link:https://exportpdf.converter.tiny.cloud/docs#section/General/CSS[CSS^]
+* link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options[Options^]
 
 
 === Demo
