DOC-2439: Copy edits, and replacing string with variables.

--- a/modules/ROOT/pages/html-to-pdf-converter-api.adoc
+++ b/modules/ROOT/pages/html-to-pdf-converter-api.adoc
@@ -27,9 +27,9 @@ The {servicename} is a powerful tool that seamlessly integrates advanced documen
 
 Tailor your PDF documents to suit your needs:
 
-* **Custom CSS Styling:** Apply link:https://exportpdf.converter.tiny.cloud/docs#section/General/CSS[custom CSS] styles to your PDFs for brand consistency and enhanced presentation.
-* **Header and Footer Options:** Add link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options/Header-and-footer[headers, footers], and other branding elements to your PDF documents for a professional touch.
-* **Page Formatting:** Control page settings such as orientation, link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options/Margins[margins], and link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options/Page-format[page size] to optimize readability.
+* **Custom CSS Styling:** Apply link:https://exportpdf.converter.tiny.cloud/docs#section/General/CSS[custom CSS^] styles to your PDFs for brand consistency and enhanced presentation.
+* **Header and Footer Options:** Add link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options/Header-and-footer[headers, footers^], and other branding elements to your PDF documents for a professional touch.
+* **Page Formatting:** Control page settings such as orientation, link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options/Margins[margins^], and link:https://exportpdf.converter.tiny.cloud/docs#section/PDF-options/Page-format[page size] to optimize readability.
 
 == Ideal for Various Use Cases
 
@@ -153,8 +153,8 @@ When using the converter service, the following options are available:
 
 == API Reference
 
-> Explore the comprehensive API documentation at https://exportpdf.converter.tiny.cloud/docs[API Reference documentation.^]
+> Explore the comprehensive API documentation at link:https://exportpdf.converter.tiny.cloud/docs[API Reference documentation.^]
 
 == Export to PDF Plugin reference
 
-> Explore {productname}'s official Export to PDF Premium plugin documentation at https://www.tiny.cloud/docs/tinymce/latest/exportpdf/[Export to PDF.^]
+> Explore {productname}'s official {pluginname} Premium plugin documentation at link:https://www.tiny.cloud/docs/tinymce/latest/exportpdf/[{pluginname}.^]
