--- a/modules/ROOT/pages/7.2-release-notes.adoc
+++ b/modules/ROOT/pages/7.2-release-notes.adoc
@@ -125,6 +125,25 @@ For more information on the `powerpaste_autolink_urls` option, refer to: xref:po
 
 For information on the **PowerPaste** premium plugin, see: xref:introduction-to-powerpaste.adoc[PowerPaste].
 
+=== Accessibility Checker
+
+The {productname} {release-version} release includes an accompanying release of the **Accessibility Checker** premium plugin.
+
+**Accessibility Checker** includes the following fix.
+
+==== Temporary elements such as incorrect spelling highlights were interfering with accessibility checking.
+// #TINY-10771
+
+Previously, elements with certain attributes, such as highlights from the xref:introduction-to-tiny-spellchecker.adoc[Spell Checker] plugin, were not being ignored by some checks in the Accessibility Checker plugin.
+
+As a consequence, these checks were not functioning correctly and were missing accessibility failures that should have been detected by the Accessibility Checker plugin.
+
+{productname} {release-version} addresses this issue. Now, the checks have been modified to ignore all elements that should be excluded, such as those with specific attributes added by the Spell Checker plugin.
+
+As a result, the Accessibility Checker now accurately identifies the accessibility issues in the content, even when temporary elements are present.
+
+For information on the **Accessibility Checker** plugin, see: xref:a11ychecker.adoc[Accessibility Checker].
+
 === Spell Checker
 
 The {productname} {release-version} includes an accompanying release of the **Spell Checker** premium plugin.
